# awaken

./: Cargo.toml  to-do.txt
asset_loader/: Cargo.toml
asset_loader/assets/img/: cobble.pix  dirt.pix  grass.pix  sentinel.pix  stone.pix  torch.pix
asset_loader/src/: lib.rs
chroma/: Cargo.toml
chroma/shaders/: scale.wgsl  shader.wgsl
chroma/src/: _lib.rs  builder.rs  camera.rs  context.rs  instance.rs  lib.rs  pixel_renderer.rs  renderers.rs  scaling.rs  texture.rs  upscale_renderer.rs  vertex.rs
game/: Cargo.toml
game/src/: animation.rs  boxes.rs  buttons.rs  camera.rs  clones.rs  collision.rs  common.rs  input.rs  lib.rs  looping.rs  main.rs  map_gen.rs  math.rs  movement.rs  physics.rs  player.rs  pushables.rs  render.rs  trails.rs  transitions.rs  win.rs
harmony/: Cargo.toml
harmony/src/: lib.rs  macros.rs
mathrix/: Cargo.toml
mathrix/src/: lib.rs  vec.rs
