[package]
name = "chroma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.3"
env_logger = "0.10"
log = "0.4"
wgpu = "0.16"
pollster = "0.2"
bytemuck = { version = "1.12", features = ["derive"]}
anyhow = "1.0"
ultraviolet = "0.9"
cfg-if = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.16", features = ["webgl"]}
rodio = { version = "0.17", features = ["wasm-bindgen"] }
getrandom = { version = "0.2.9", features = ["js"] } 
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[lib]
crate-type = ["cdylib", "rlib"]