[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.3"
chroma = { path = "../chroma" }
asset_loader = { path = "../asset_loader" }
harmony = { path = "../harmony" }
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
anyhow = "1.0"
rand = "0.8.5"
cfg-if = "1"
instant = { version = "0.1", features = [ "stdweb" ] }
num = "0.4.0"
rodio = { version = "0.17" }
winit_input_helper = "0.14.1"
itertools = "0.10.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rodio = { version = "0.17", features = ["wasm-bindgen"] }
getrandom = { version = "0.2.9", features = ["js"] } 
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
